--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ nav{
 .pricing-container{
     padding-bottom: 5rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .pricing-container h2{
@@ -286,4 +290,88 @@ footer{
     font-weight: bold;
     padding: 50px 0 50px;
     background-color: #232a31;
+}
+
+/* responsividade*/
+/*Small laptops 1100px*/
+@media (max-width: 1100px){
+    .plans-container{
+        width: 95%;
+    }
+    .plan{
+        margin: 0 5px;
+    }
+}
+/*tablet 900px*/
+@media (max-width: 900px){
+    .main-banner p {
+        padding: 0 6rem;
+    }
+    .searchdomain-container{
+        padding: 2rem 4rem;
+    }
+}
+@media (max-width: 800px){
+    .plans-container{
+        flex-direction: column;
+        align-items: center;
+        padding: 0 2 rem;
+    }
+    .plan{
+        width: 50%;
+        max-width: 100%;
+        margin-bottom: 15px;
+    }
+}
+
+/*celular 576px*/
+@media (max-width: 576px){
+    html, body{
+        overflow-x: hidden;
+    }
+
+    .navbar-items li{
+        font-size: 10px;
+        margin-left: 5px;
+    }
+    .main-banner p{
+        padding: 0 2rem;
+        font-size: 1rem;
+    }
+
+    .services-container ul{
+        flex-direction: column;
+    }
+    .plans-container{
+        flex-direction: column;
+        align-items: center;
+        padding: 0 2 rem;
+    }
+    .plan{
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: 15px;
+    }
+    .searchdomain-container h2 {
+        font-size: 20px;
+    }
+    .searchdomain-container p{
+        font-size: 14px;
+    }
+    .searchdomain-container input[type="text"]{
+        width: 100%;
+    }
+    .contact-container {
+        padding: 3rem 2rem;
+    }
+    .contact-container input, .contact-container textarea{
+        width: 100%;
+        margin: 10px 0;
+    }
+    .contact-container h2{
+        font-size: 20px;
+    }
+    .contact-container p{
+        font-size: 14px;
+    }
 }
